🐛 FIX: flicker issue on suspense, changed color of cards, tobbar padding issue and fix hover issue on options

--- a/src/components/skeleton/skeleton.style.css
+++ b/src/components/skeleton/skeleton.style.css
@@ -96,7 +96,7 @@
   /* height: 230px; */
   width: 100%;
   background-color: #b4a9ca;
-  margin: 10px auto 50px;
+  margin-bottom: 50px;
   padding: 20px 40px 20px;
   position: relative;
   overflow: hidden;
